@@ -647,6 +647,8 @@ struct
      "variable length arrays can be initalized by empty initalizers only", 0 },
   { W_ENUM_INT_RANGE_C2X, ERROR_LEVEL_WARNING,
      "enumeration constant outside the range of int requires ISO C2X or later", 0 },
+  { E_Z88DK_CALLEE_VARARG, ERROR_LEVEL_ERROR,
+     "__z88dk_callee with variable arguments not supported", 0 },
 };
 
 /* -------------------------------------------------------------------------------
